#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([ssocks], [0.0.7], [h.caron@codsec.com])
AC_CONFIG_SRCDIR([src/bor-timer.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# I need it!
AM_INIT_AUTOMAKE
#([ssocks], [0.0.1])

# Checks for libraries.
AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_LIB(ssl, SSL_library_init)


# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_TYPE_PID_T
AC_TYPE_UINT16_T

# Checks for library functions.
AC_FUNC_FORK
AC_CHECK_FUNCS([atexit gethostbyname gettimeofday inet_ntoa memmove memset select socket strcasecmp strchr])

AC_CONFIG_FILES([Makefile
				man/Makefile
				src/Makefile])

AC_OUTPUT
